// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistrictStandardsReports when the access type is limited renders 1`] = `
<Connect(DistrictStandardsReports)
  accessType="limited"
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DistrictStandardsReports
    accessType="limited"
    csvData={
      Array [
        Array [
          "Standard Level",
          "Standard Name",
          "Students",
          "Proficient",
          "Activities",
          "Time Spent",
        ],
      ]
    }
    errors={false}
    filteredStandardsReportsData={Array []}
    getDistrictStandardsReports={[Function]}
    loading={false}
    standardsReportsData={Array []}
    store={
      Object {
        "dispatch": [Function],
        "getAction": [Function],
        "getActions": [Function],
        "getState": [Function],
        "isActionDispatched": [Function],
        "isActionTypeDispatched": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <div
      className="container gray-background-accommodate-footer"
    >
      <NonPremiumReport
        bezelPath="standards_report_product_bezel_2x.png"
        headerText="Standards Report"
        subheaderText="View a school’s overall progress on each of the Common Core standards. Included with Quill Premium."
      >
        <div
          className="white-background-accommodate-footer"
        >
          <div
            className="container non-premium-admin-report"
          >
            <section
              className="top-section"
            >
              <h1>
                Standards Report
              </h1>
              <p>
                View a school’s overall progress on each of the Common Core standards. Included with Quill Premium.
              </p>
              <div
                className="buttons"
              >
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="https://calendly.com/alex-quill"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Talk to Sales
                </a>
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="/premium"
                  target="_blank"
                >
                  Explore Premium
                </a>
              </div>
              <img
                alt=""
                className="bezel"
                src="undefined/images/pages/administrator/non_premium_report_view/standards_report_product_bezel_2x.png"
              />
            </section>
          </div>
        </div>
      </NonPremiumReport>
    </div>
  </DistrictStandardsReports>
</Connect(DistrictStandardsReports)>
`;

exports[`DistrictStandardsReports when the access type is restricted renders 1`] = `
<Connect(DistrictStandardsReports)
  accessType="restricted"
  store={
    Object {
      "dispatch": [Function],
      "getAction": [Function],
      "getActions": [Function],
      "getState": [Function],
      "isActionDispatched": [Function],
      "isActionTypeDispatched": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DistrictStandardsReports
    accessType="restricted"
    csvData={
      Array [
        Array [
          "Standard Level",
          "Standard Name",
          "Students",
          "Proficient",
          "Activities",
          "Time Spent",
        ],
      ]
    }
    errors={false}
    filteredStandardsReportsData={Array []}
    getDistrictStandardsReports={[Function]}
    loading={false}
    standardsReportsData={Array []}
    store={
      Object {
        "dispatch": [Function],
        "getAction": [Function],
        "getActions": [Function],
        "getState": [Function],
        "isActionDispatched": [Function],
        "isActionTypeDispatched": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <div
      className="container gray-background-accommodate-footer"
    >
      <NonPremiumReport
        bezelPath="standards_report_product_bezel_2x.png"
        headerText="Standards Report"
        subheaderText="View a school’s overall progress on each of the Common Core standards. Included with Quill Premium."
      >
        <div
          className="white-background-accommodate-footer"
        >
          <div
            className="container non-premium-admin-report"
          >
            <section
              className="top-section"
            >
              <h1>
                Standards Report
              </h1>
              <p>
                View a school’s overall progress on each of the Common Core standards. Included with Quill Premium.
              </p>
              <div
                className="buttons"
              >
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="https://calendly.com/alex-quill"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Talk to Sales
                </a>
                <a
                  className="quill-button contained primary large focus-on-light"
                  href="/premium"
                  target="_blank"
                >
                  Explore Premium
                </a>
              </div>
              <img
                alt=""
                className="bezel"
                src="undefined/images/pages/administrator/non_premium_report_view/standards_report_product_bezel_2x.png"
              />
            </section>
          </div>
        </div>
      </NonPremiumReport>
    </div>
  </DistrictStandardsReports>
</Connect(DistrictStandardsReports)>
`;
